--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta name="google-site-verification" content="F1clBh5bvAMt4xY5ooNB2-7nPfJy-y8sx3Sfjh0U4JE" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Peter Mbuthia | Software Developer</title>
